[project]
name = "ae"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "python-binance>=1.0.19",
    "binance-sdk-derivatives-trading-usds-futures>=9.1.0",
    "binance-sdk-spot>=8.1.0",
    "flask>=3.1.3",
    "flask-cors>=6.0.2",
    "flask-httpauth>=4.8.1",
    "requests>=2.33.0",
    "uuid>=1.30",
    "werkzeug>=3.1.7",
    "pandas>=3.0.1",
    "dotenv>=0.9.9",
]
